--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -20,23 +20,10 @@ jobs:
     runs-on:
       group: "CPUBound"
     steps:
+      - uses: ./.github/actions/prepare/action.yml
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: arduino/setup-protoc@v2
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-unknown-linux-gnu
-      - name: Install LLVM and Clang
-        run: |
-          wget https://apt.llvm.org/llvm.sh -O /tmp/llvm.sh && chmod +x /tmp/llvm.sh && sudo /tmp/llvm.sh 16
-          sudo apt-get install --yes --no-install-recommends libsecp256k1-dev libsodium-dev libc++-16-dev libc++abi-16-dev
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-16 101
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-16 101
-
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.3
-
       - name: Build mainnet version
         run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu --release --features "${{ matrix.features }}"
         env:
