--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -58,6 +58,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
+          file: tvm-grpc.Dockerfile
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
