--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -26,8 +26,7 @@ jobs:
         with:
           submodules: recursive
       - uses: ./.github/actions/prepare
-      - name: Build mainnet version
-        run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu --release --features "${{ matrix.features }}"
+      - run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu --release --features "${{ matrix.features }}"
         env:
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
@@ -58,7 +57,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          file: tvm-grpc.Dockerfile
+          file: tvm-grpc/Dockerfile
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
