--- a/tvm-grpc/Dockerfile
+++ b/tvm-grpc/Dockerfile
@@ -1,6 +1,6 @@
 FROM gcr.io/distroless/cc-debian12
 
-COPY target/x86_64-unknown-linux-gnu/release/tvm-grpc /bin/tvm-grpc
+COPY ../target/x86_64-unknown-linux-gnu/release/tvm-grpc /bin/tvm-grpc
 
 ENV OTLP=true
 
