--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -27,7 +27,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: ./.github/actions/prepare
+      - uses: arduino/setup-protoc@v2
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-unknown-linux-gnu
+#      - name: Run sccache-cache
+#        uses: mozilla-actions/sccache-action@v0.0.3
       - run: cargo build -v --target x86_64-unknown-linux-gnu
       - run: cargo build -v --target x86_64-unknown-linux-gnu --features testnet
       - uses: actions-rs/clippy-check@v1
