--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -33,13 +33,13 @@ jobs:
           targets: x86_64-unknown-linux-gnu
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
-      - run: cargo build -v --target x86_64-unknown-linux-gnu
+      - run: RUSTFLAGS="" cargo build -v --target x86_64-unknown-linux-gnu
         env:
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
-      - run: cargo build -v --target x86_64-unknown-linux-gnu --features testnet
+      - run: RUSTFLAGS="" cargo build -v --target x86_64-unknown-linux-gnu --features testnet
         env:
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
