--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - run: sudo apt-get install --yes --no-install-recommends libsecp256k1-dev libsodium-dev
       - uses: arduino/setup-protoc@v2
       - uses: dtolnay/rust-toolchain@stable
         with:
