--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -36,19 +36,27 @@ jobs:
           targets: x86_64-unknown-linux-gnu
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
-      - run: RUSTFLAGS="" cargo build -v --target x86_64-unknown-linux-gnu
+      - run: cargo build -v --target x86_64-unknown-linux-gnu
         env:
+          RUSTFLAGS: ""
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
-      - run: RUSTFLAGS="" cargo build -v --target x86_64-unknown-linux-gnu --features testnet
+      - run: cargo build -v --target x86_64-unknown-linux-gnu --features testnet
         env:
+          RUSTFLAGS: ""
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
       - uses: actions-rs/clippy-check@v1
+        env:
+          RUSTFLAGS: ""
+          SCCACHE_GHA_ENABLED: "true"
+          RUSTC_WRAPPER: "sccache"
+          CMAKE_C_COMPILER_LAUNCHER: "sccache"
+          CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features --target x86_64-unknown-linux-gnu
