--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -20,6 +20,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
 rayon = "1.8"
+lru = "0.11.1"
 
 [build-dependencies]
 tonic-build = { workspace = true }
