--- a/.github/workflows/ton-grpc-release.yaml
+++ b/.github/workflows/ton-grpc-release.yaml
@@ -53,7 +53,7 @@ jobs:
             type=sha
             type=sha,format=long
             type=ref,event=branch
-            type=semver,pattern=ton-grpc-v{{version}}
+            type=match,match=ton-grpc-v(.*),group=1
             
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
