--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -20,7 +20,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
 rayon = "1.8"
-lru = "0.11.1"
+quick_cache = "0.4"
 
 [build-dependencies]
 tonic-build = { workspace = true }
