feat: ton-grpc ton_liteserver_last_seqno metric

--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -24,6 +24,7 @@ tonic-health = { workspace = true }
 prost = { workspace = true }
 either = "1.9"
 derive-new = "0.5.9"
+metrics-exporter-prometheus = "0.12.1"
 
 [build-dependencies]
 tonic-build = { workspace = true }
