--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -31,6 +31,7 @@ async-trait = "0.1.73"
 tokio-retry = "0.3"
 bytes = "1.5"
 crc = "3.0.1"
+metrics = "0.21.1"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
