--- a/charts/ton-grpc/templates/service.yaml
+++ b/charts/ton-grpc/templates/service.yaml
@@ -11,5 +11,11 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+    {{- if .Values.metrics.enabled }}
+    - port: 9000
+      targetPort: metrics
+      protocol: TCP
+      name: metrics
+    {{- end }}
   selector:
     {{- include "ton-grpc.selectorLabels" . | nindent 4 }}
