--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,1 @@
-{"charts/ton-grpc":"0.1.2","charts/tvm-grpc":"0.2.0","ton-grpc":"0.1.2","tvm-grpc":"0.3.3"}
+{"charts/ton-grpc":"0.2.0","charts/tvm-grpc":"0.2.0","ton-grpc":"0.2.0","tvm-grpc":"0.3.4","tonlibjson-client":"0.1.0","tonlibjson-sys":"0.1.0"}
