fix: fix pod args

--- a/charts/ton-grpc/templates/deployment.yaml
+++ b/charts/ton-grpc/templates/deployment.yaml
@@ -34,6 +34,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
+            - /bin/ton-grpc
             {{- if .Values.metrics.enabled }}
             - --enable-metrics
             {{- end }}
