--- a/charts/ton-grpc/values.yaml
+++ b/charts/ton-grpc/values.yaml
@@ -40,10 +40,9 @@ service:
   port: 80
 
 ingress:
-  enabled: true
-  className: "nginx-internal"
+  enabled: false
+  className: ""
   annotations:
-     kubernetes.io/ingress.class: nginx-internal
      nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
   hosts:
     - host: chart-example.local
