--- a/charts/tvm-grpc/values.yaml
+++ b/charts/tvm-grpc/values.yaml
@@ -36,11 +36,10 @@ service:
   port: 80
 
 ingress:
-  enabled: true
-  className: "nginx-internal"
+  enabled: false
+  className: ""
   annotations:
-     kubernetes.io/ingress.class: nginx-internal
-     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
   hosts:
     - host: chart-example.local
       paths:
