--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ prost = "0.11"
 opentelemetry = { version = "0.19.0", features = ["rt-tokio", "metrics"] }
 opentelemetry-otlp = { version = "0.12.0", features = ["metrics"] }
 tracing-opentelemetry = "0.19.0"
+quick_cache = "0.4"
