--- a/charts/ton-grpc/templates/deployment.yaml
+++ b/charts/ton-grpc/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
             tcpSocket:
               port: http
           readinessProbe:
-            tcpSocket:
+            grpc:
               port: http
           startupProbe:
             tcpSocket:
