--- a/.github/workflows/charts-ton-grpc-pr.yaml
+++ b/.github/workflows/charts-ton-grpc-pr.yaml
@@ -5,8 +5,6 @@ on:
   pull_request:
     branches:
       - "master"
-    paths:
-      - charts/**
 
 jobs:
   lint-test:
@@ -24,7 +22,7 @@ jobs:
           check-latest: true
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2
+        uses: helm/chart-testing-action@main
 
       - name: Run chart-testing (list-changed)
         id: list-changed
