--- a/.github/workflows/charts-ton-grpc-pr.yaml
+++ b/.github/workflows/charts-ton-grpc-pr.yaml
@@ -25,6 +25,8 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@main
 
+      - run: git checkout master; git checkout -;
+
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
