--- a/.github/workflows/charts-ton-grpc-pr.yaml
+++ b/.github/workflows/charts-ton-grpc-pr.yaml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   lint-test:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: "CPUBound"
     steps:
       - uses: actions/checkout@v4
         with:
