--- a/.github/workflows/charts-ton-grpc-pr.yaml
+++ b/.github/workflows/charts-ton-grpc-pr.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run chart-testing (lint)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --check-version-increment=false  --helm-extra-set-args="--set=image.repository=ghcr.io/getgems-io/ton-grpc-testnet"
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --check-version-increment=false
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
@@ -46,4 +46,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }}
+        run: ct install --target-branch ${{ github.event.repository.default_branch }} --helm-extra-set-args="--set=image.repository=ghcr.io/getgems-io/ton-grpc-testnet"
