--- a/charts/ton-grpc/templates/deployment.yaml
+++ b/charts/ton-grpc/templates/deployment.yaml
@@ -60,14 +60,15 @@ spec:
               {{- toYaml .Values.extraEnvs | nindent 12 }}
             {{- end }}
           livenessProbe:
-            tcpSocket:
-              port: http
+            grpc:
+              port: 50052
           readinessProbe:
             grpc:
               port: 50052
           startupProbe:
-            tcpSocket:
-              port: http
+            grpc:
+              port: 50052
+            initialDelaySeconds: 15
             failureThreshold: 30
             periodSeconds: 10
           resources:
