--- a/charts/ton-grpc/templates/tests/test-connection.yaml
+++ b/charts/ton-grpc/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: grpcurl
       image: fullstorydev/grpcurl
       command: ['grpcurl']
-      args: ['-insecure', '{{ include "ton-grpc.fullname" . }}:{{ .Values.service.port }}', 'ton.BlockService/GetLastBlock']
+      args: ['-plaintext', '{{ include "ton-grpc.fullname" . }}:{{ .Values.service.port }}', 'ton.BlockService/GetLastBlock']
   restartPolicy: Never
