--- a/.github/workflows/charts-ton-grpc-pr.yaml
+++ b/.github/workflows/charts-ton-grpc-pr.yaml
@@ -46,4 +46,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }} --helm-extra-args="--atomic" --helm-extra-set-args="--set=image.repository=ghcr.io/getgems-io/ton-grpc-testnet"
+        run: ct install --target-branch ${{ github.event.repository.default_branch }} --helm-extra-set-args="--set=image.repository=ghcr.io/getgems-io/ton-grpc-testnet"
