--- a/.github/workflows/charts-lint-test-pr.yaml
+++ b/.github/workflows/charts-lint-test-pr.yaml
@@ -46,4 +46,5 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
+        # TODO[akostylev0] fix image for tvm
         run: ct install --target-branch ${{ github.event.repository.default_branch }} --helm-extra-set-args="--set=image.repository=ghcr.io/getgems-io/ton-grpc-testnet"
