feat: testnet flag

--- a/charts/tvm-grpc/values.yaml
+++ b/charts/tvm-grpc/values.yaml
@@ -5,6 +5,12 @@ image:
   pullPolicy: IfNotPresent
   tag: "master"
 
+testnet:
+  enabled: false
+  image:
+    repository: ghcr.io/getgems-io/tvm-grpc-testnet
+    tag: "master"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
