fix: testnet image pullpolicy

--- a/charts/tvm-grpc/values.yaml
+++ b/charts/tvm-grpc/values.yaml
@@ -9,6 +9,7 @@ testnet:
   enabled: false
   image:
     repository: ghcr.io/getgems-io/tvm-grpc-testnet
+    pullPolicy: IfNotPresent
     tag: "master"
 
 imagePullSecrets: []
