--- a/charts/tvm-grpc/templates/deployment.yaml
+++ b/charts/tvm-grpc/templates/deployment.yaml
@@ -33,10 +33,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           {{- if .Values.testnet.enabled }}
           image: "{{ .Values.testnet.image.repository }}:{{ .Values.testnet.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.testnet.image.pullPolicy }}
           {{- else -}}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- end }}
+
           ports:
             - name: http
               containerPort: 50052
