--- a/charts/tvm-grpc/templates/deployment.yaml
+++ b/charts/tvm-grpc/templates/deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -34,7 +35,7 @@ spec:
           {{- if .Values.testnet.enabled }}
           image: "{{ .Values.testnet.image.repository }}:{{ .Values.testnet.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.testnet.image.pullPolicy }}
-          {{- else -}}
+          {{ else }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- end }}
