--- a/.github/workflows/charts-lint-test-pr.yaml
+++ b/.github/workflows/charts-lint-test-pr.yaml
@@ -1,10 +1,11 @@
 name: Lint and Test Charts
 
 on:
-  workflow_dispatch:
   pull_request:
     branches:
       - "master"
+    paths:
+      - charts/**
 
 jobs:
   lint-test:
@@ -46,5 +47,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
-        # TODO[akostylev0] fix image for tvm
         run: ct install --target-branch ${{ github.event.repository.default_branch }} --helm-extra-set-args="--set=testnet.enabled=true"
