--- a/charts/ton-grpc/Chart.yaml
+++ b/charts/ton-grpc/Chart.yaml
@@ -2,3 +2,6 @@ apiVersion: v2
 name: ton-grpc
 home: https://github.com/getgems-io/tonlibjson
 version: 0.2.2
+maintainers:
+  - name: akostylev0
+    email: a.kostylev@pm.me
