--- a/charts/tvm-grpc/values.yaml
+++ b/charts/tvm-grpc/values.yaml
@@ -1,9 +1,16 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/getgems-io/ton-grpc
+  repository: ghcr.io/getgems-io/tvm-grpc
   pullPolicy: IfNotPresent
   tag: "master"
+
+testnet:
+  enabled: false
+  image:
+    repository: ghcr.io/getgems-io/tvm-grpc-testnet
+    pullPolicy: IfNotPresent
+    tag: "master"
 
 imagePullSecrets: []
 nameOverride: ""
