--- a/charts/tvm-grpc/templates/deployment.yaml
+++ b/charts/tvm-grpc/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+        kubectl.kubernetes.io/default-container: {{ .Chart.Name }}
       labels:
         {{- include "tvm-grpc.selectorLabels" . | nindent 8 }}
     spec:
