--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -28,6 +28,7 @@ either = "1.9"
 derive-new = "0.6.0"
 clap = { version = "4.4.7", features = ["derive"] }
 metrics-exporter-prometheus = "0.12.1"
+humantime = "2.1.0"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
